--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<head>
     <meta charset="utf-8">
-    <title>Login and Registration Form in HTML | CodingNepal</title>
+    <title>Login and Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
    
@@ -91,8 +84,4 @@
 </script>
 </body>
 
-
-
-
-</body>
 </html>
